--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -18,8 +18,8 @@
       <div class="project fade">
         <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
         <section class="project_description">
-          <h3 id="descriptionTitle">Harlen Bertrand</h3>
-          <h5 id="blackText">I draw, paint, code, do silly voices, and ride a 
+          <h3 class="descriptionTitle">Harlen Bertrand</h3>
+          <h5 class="blackText">I draw, paint, code, do silly voices, and ride a 
             motorcycle when I have free time! Hence, the leather 
             jacket. Pretty nifty, innit?
           </h5>
@@ -38,10 +38,10 @@
         </section>
       </div>
       <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="Graim">
+        <img class="project_thumbnail" src="./images/poster 2.png" alt="Vigilance">
         <section class="project_description">
-          <h3>Vigilance</h3>
-          <h5>Vigilance tells the story of a private investigator who 
+          <h3 class="descriptionTitle">Vigilance</h3>
+          <h5 class="blackText">Vigilance tells the story of a private investigator who 
             is investigating a mysterious superhuman that some people call
             a hero while some call a villain.
           </h5>
@@ -58,7 +58,7 @@
         </section>
       </div>
       <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <img class="project_thumbnail" src="./images/Concept - Forest.jpg" alt="Forest">
         <section class="project_description">
           <h3>The Children of the Tree</h3>
           <h5>The Children of the Tree is a hypothetical video game that tells
@@ -68,106 +68,14 @@
         </section>
       </div>
       <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
+        <img class="project_thumbnail" src="./images/Package Mockups.png" alt="Coffee">
         <section class="project_description">
           <h3>Coffee Mockup</h3>
-          <h5>This hypothetical coffee brand, named Hypnos & Joe, is a CBD infused
-            sleepytime drink that is meant to do the exact opposite of what Coffee
-            is meant to do.
+          <h5>Created with a combination of Blender, Illustrator, and Photoshop; this
+            project was meant to showcase a hypotehtical coffee brand.
           </h5>
         </section>
       </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Design Student Life Animation</h3>
-          <h5>The design student life is a silly animation that is meant to
-            give a glimpse into what I experienced as a design student and trying
-            to find a balance in work and life.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Tuscany Bag Mockup</h3>
-          <h5>An assignment at Capilano University that is meant to condense
-            a countries culture into a bag that is given to vistors to the country.</a>
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Nanaimo Crime Stoppers</h3>
-          <h5>The Nanaimo Police Department had approached us students to design
-            a series of posters that is to promote their crime stoppers division
-            and to encourage citizen participation.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>SOCAN Annual Report Mockup</h3>
-          <h5>SOCAN, otherwise known as The Society of Composers, Authors and
-            Publishers is a Canadian Based orangization that is meant to protect
-            artists and their work.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Digital Typography</h3>
-          <h5>Famous names known throughout the design world are featured in this
-            mocked up magazine spread that are composed of portraits of said designers
-            in the form of ASCII art.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Evangeline Wine Mockup</h3>
-          <h5>Evangeline is the name of a wine that is meant to instill a sense of
-            elegance and art deco that is named after the creators wife, Evangeline.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Gear S3 Mock Advertisement</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Yuko Shimizu - Restrospective</h3>
-          <h5>Yuko Shimizu is a famed illustrator who has her feet dipped into many
-            different subject matters such as the abstract, the surreal, and the
-            fantasy genre.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Total Recall Movie Poster</h3>
-          <h5>Total Recall tells the story of Douglas Quiad. A lowly construction
-            worker who becomes the victim of an interplanetary conspiracy that
-            thrusts him into a fight for survival.
-          </h5>
-        </section>
-      </div>
-
-      <a class="project_navigate_left" onclick="plusSlides(-1)"></a>
-      <a class="project_navigate_right" onclick="plusSlides(1)"></a>
 
     </div>
 
@@ -206,39 +114,7 @@
             </ul>
           </section>
 
-          <div class="button fade">
-            <ul>
-              <li>
-                <a onclick="currentSlide(2)">
-                  <button>Design Student Life</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(3)">
-                  <button>Tuscany Bag</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(4)">
-                  <button>Crime Stoppers</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(5)">
-                  <button>SOCAN Report</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(6)">
-                  <button>Digital Typography</button>
-                </a>
-              </li>
-            </ul>
-          </div>
-
         </section>
-      <a class="buttons_navigate_left" onclick="plusButtons(-1)"></a>
-      <a class="buttons_navigate_right" onclick="plusBUttons(1)"></a>
     </div>
 
     <div id="externalLinks">
