--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -6,124 +6,49 @@
     <meta name="description" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles/mid-fi Style.css">
-    <script type="text/javascript" src="./js/carouselBehaviour.js"></script>
   </head>
 
-  <body onload = showSlides(1)>
-    <a onclick="currentSlide(1)" id="reset">Harlen Bertrand</a>
+  <body>
+    <a id="reset">Harlen Bertrand</a>
     <h2>Character Illustrator/Designer</h2>
     
     <div id="project_viewerport">
+      <div id="scroll-container">
 
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
-        <section class="project_description">
-          <h3 class="descriptionTitle">Harlen Bertrand</h3>
-          <h5 class="blackText">I draw, paint, code, do silly voices, and ride a 
-            motorcycle when I have free time! Hence, the leather 
-            jacket. Pretty nifty, innit?
-          </h5>
-        </section>
-      </div>
-
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Project Fire</h3>
-          <h5>Project Fire tells the story of a Knight tasked to find a 
-            prince who has run away from his royal roots in search of a 
-            legendary treasure that is said to grant the user any wish 
-            that they want.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/poster 2.png" alt="Vigilance">
-        <section class="project_description">
-          <h3 class="descriptionTitle">Vigilance</h3>
-          <h5 class="blackText">Vigilance tells the story of a private investigator who 
-            is investigating a mysterious superhuman that some people call
-            a hero while some call a villain.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Project-Arroyo - EPA.jpg" alt="EPA">
-        <section class="project_description">
-          <h3>Project Arroyo</h3>
-          <h5>Fallout: Project Arroyo is a fan recreation of Fallout 2 in the
-            Fallout 4 game engine using updated graphics, mechanics, and story
-            telling.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Concept - Forest.jpg" alt="Forest">
-        <section class="project_description">
-          <h3>The Children of the Tree</h3>
-          <h5>The Children of the Tree is a hypothetical video game that tells
-            the story of a fisherman caught up in a world of dreams who is searching
-            for their lost family.
-          </h5>
-        </section>
-      </div>
-      <div class="project fade">
-        <img class="project_thumbnail" src="./images/Package Mockups.png" alt="Coffee">
-        <section class="project_description">
-          <h3>Coffee Mockup</h3>
-          <h5>Created with a combination of Blender, Illustrator, and Photoshop; this
-            project was meant to showcase a hypotehtical coffee brand.
-          </h5>
-        </section>
-      </div>
-
-    </div>
-
-
-    <div id="nav_bar">
-      <h4>Projects</h4>
-        <section class="table">
-
-          <section class="button_fade">
-            <ul>
-              <li>
-                <a onclick="currentSlide(2)">
-                  <button>Project Fire</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(3)">
-                  <button>Vigilance</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(4)">
-                  <button>Project Arroyo</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(5)">
-                  <button>The Children of the Tree</button>
-                </a>
-              </li>
-              <li>
-                <a onclick="currentSlide(6)">
-                  <button>Coffee Mockup</button>
-                </a>
-              </li>
-            </ul>
+        <div class="box one">
+          <img class="project_thumbnail" src="./images/Concept - Village Final.png" alt="Me">
+          <section class="project_description">
+            <h3 class="descriptionTitle">Harlen Bertrand</h3>
+            <h5 class="blackText">I draw, paint, code, do silly voices, and ride a 
+              motorcycle when I have free time! Hence, the leather 
+              jacket. Pretty nifty, innit?
+            </h5>
           </section>
+        </div>
 
-        </section>
+        <div class="box two">
+          <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
+          <section class="project_description">
+            <h3>Harlen Bertrand</h3>
+            <h5>I draw, paint, code, do silly voices, and ride a 
+              motorcycle when I have free time! Hence, the leather 
+              jacket. Pretty nifty, innit?
+            </h5>
+          </section>
+        </div>
+
+        <div class="box three">
+          <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
+          <section class="project_description">
+            <h3>Harlen Bertrand</h3>
+            <h5>I draw, paint, code, do silly voices, and ride a 
+              motorcycle when I have free time! Hence, the leather 
+              jacket. Pretty nifty, innit?
+            </h5>
+          </section>
+        </div>
+      </div>
     </div>
-
-    <div id="externalLinks">
-      <button id="linked"></button>
-      <button id="insta"></button>
-      <button id="art"></button>
-    </div>
-
-    <button id="contact">Contact</button>
 
   </body>
 </html>
