Proper Thumbnails and Carousel

--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -16,7 +16,7 @@
       <div id="scroll-container">
 
         <div class="box one">
-          <img class="project_thumbnail" src="./images/Concept - Village Final.png" alt="Me">
+          <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
           <section class="project_description">
             <h3 class="descriptionTitle">Harlen Bertrand</h3>
             <h5 class="blackText">I draw, paint, code, do silly voices, and ride a 
@@ -27,28 +27,141 @@
         </div>
 
         <div class="box two">
-          <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
+          <img class="project_thumbnail" src="./images/Project Fire_Thumbnail.png" alt="Fire">
           <section class="project_description">
-            <h3>Harlen Bertrand</h3>
-            <h5>I draw, paint, code, do silly voices, and ride a 
-              motorcycle when I have free time! Hence, the leather 
-              jacket. Pretty nifty, innit?
+            <h3>Project Fire</h3>
+            <h5>Project Fire tells the story of a Knight tasked to find a 
+              prince who has run away from his royal roots in search of a 
+              legendary treasure that is said to grant the user any wish 
+              that they want.
             </h5>
           </section>
         </div>
 
         <div class="box three">
-          <img class="project_thumbnail" src="./images/Project Fire - Thumbnail.jpg" alt="EPA">
+          <img class="project_thumbnail" src="./images/Vigilance_Thumbnail.png" alt="Vigilance">
           <section class="project_description">
-            <h3>Harlen Bertrand</h3>
-            <h5>I draw, paint, code, do silly voices, and ride a 
-              motorcycle when I have free time! Hence, the leather 
-              jacket. Pretty nifty, innit?
+            <h3 class="descriptionTitle">Vigilance</h3>
+            <h5 class="blackText">Vigilance tells the story of a private investigator who 
+              is investigating a mysterious superhuman responisble for strange events
+              throughout the city.
             </h5>
           </section>
         </div>
+
+        <div class="box four">
+          <img class="project_thumbnail" src="./images/Arroyo_Thumbnail.png" alt="EPA">
+          <section class="project_description">
+            <h3>Project Arroyo</h3>
+            <h5>Fallout: Project Arroyo is a fan recreation of Fallout 2 in the
+              Fallout 4 game engine using updated graphics, mechanics, and story
+              telling.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box five">
+          <img class="project_thumbnail" src="./images/Forest_Thumbnail.png" alt="Forest">
+          <section class="project_description">
+            <h3>The Children of the Tree</h3>
+            <h5>The Children of the Tree is a hypothetical video game that tells
+              the story of a fisherman caught up in a world of dreams who is searching
+              for their lost family.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box six">
+          <img class="project_thumbnail" src="./images/Package_Thumbnail.png" alt="Package">
+          <section class="project_description">
+            <h3>Coffee Mockup</h3>
+            <h5>This hypothetical coffee brand, named Hypnos & Joe, is a CBD infused
+              sleepytime drink that is meant to do the exact opposite of what Coffee
+              is meant to do.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box seventh">
+          <img class="project_thumbnail" src="./images/Student_Thumbnail.png" alt="Environment">
+          <section class="project_description">
+            <h3>Design Student Life Animation</h3>
+            <h5>The design student life is a silly animation that is meant to
+              give a glimpse into what I experienced as a design student and trying
+              to find a balance in work and life.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box eigth">
+          <img class="project_thumbnail" src="./images/Retrospective_Thumbnail.png" alt="Restrospective">
+          <section class="project_description">
+            <h3 class="descriptionTitle">Yuko Shimizu - Restrospective</h3>
+            <h5 class="blackText">Yuko Shimizu is a famed illustrator who has her feet dipped into many
+              different subject matters such as the abstract, the surreal, and the
+              fantasy genre.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box ninth">
+          <img class="project_thumbnail" src="./images/Movieposter_Thumbnail.png" alt="Total Recall">
+          <section class="project_description">
+            <h3 class="descriptionTitle">Total Recall Movie Poster</h3>
+            <h5 class="blackText">Total Recall tells the story of Douglas Quiad. A lowly construction
+              worker who becomes the victim of an interplanetary conspiracy that
+              thrusts him into a fight for survival.
+            </h5>
+          </section>
+        </div>
+
       </div>
     </div>
+
+    <div id="nav_bar">
+      <h4>Projects</h4>
+        <section class="table">
+
+          <section class="button_fade">
+            <ul>
+              <li>
+                <a">
+                  <button>Project Fire</button>
+                </a>
+              </li>
+              <li>
+                <a">
+                  <button>Vigilance</button>
+                </a>
+              </li>
+              <li>
+                <a">
+                  <button>Project Arroyo</button>
+                </a>
+              </li>
+              <li>
+                <a">
+                  <button>The Children of the Tree</button>
+                </a>
+              </li>
+              <li>
+                <a">
+                  <button>Coffee Mockup</button>
+                </a>
+              </li>
+            </ul>
+          </section>
+
+        </section>
+    </div>
+
+    <div id="externalLinks">
+      <button id="linked"></button>
+      <button id="insta"></button>
+      <button id="art"></button>
+    </div>
+
+    <button id="contact">Contact</button>
 
   </body>
 </html>
