Added horizontal scrolling to both lists.

--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -13,7 +13,7 @@
     <h2>Character Illustrator/Designer</h2>
     
     <div id="project_viewerport">
-      <div id="scroll-container">
+      <div id="project-scroll-container">
 
         <div class="box one">
           <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
@@ -72,12 +72,12 @@
         </div>
 
         <div class="box six">
-          <img class="project_thumbnail" src="./images/Package_Thumbnail.png" alt="Package">
+          <img class="project_thumbnail" src="./images/Angels_Thumbnail.png" alt="Angels">
           <section class="project_description">
-            <h3>Coffee Mockup</h3>
-            <h5>This hypothetical coffee brand, named Hypnos & Joe, is a CBD infused
-              sleepytime drink that is meant to do the exact opposite of what Coffee
-              is meant to do.
+            <h3 class="descriptionTitle">Angels</h3>
+            <h5 class="blackText">Two people connected by fate are forced into a world filled with a
+              deadly mist to discover the origins behind myserious lights in the sky
+              and glowing beings.
             </h5>
           </section>
         </div>
@@ -94,12 +94,11 @@
         </div>
 
         <div class="box eigth">
-          <img class="project_thumbnail" src="./images/Retrospective_Thumbnail.png" alt="Restrospective">
+          <img class="project_thumbnail" src="./images/JamesWebb_Thumbnail.png" alt="James Webb">
           <section class="project_description">
-            <h3 class="descriptionTitle">Yuko Shimizu - Restrospective</h3>
-            <h5 class="blackText">Yuko Shimizu is a famed illustrator who has her feet dipped into many
-              different subject matters such as the abstract, the surreal, and the
-              fantasy genre.
+            <h3>James Webb Telescope</h3>
+            <h5>The James Webb Telescope was launched on Christmas
+              Day, 2021 marking a momentous occasion in the scientific field.
             </h5>
           </section>
         </div>
@@ -115,53 +114,93 @@
           </section>
         </div>
 
+        <div class="box tenth">
+          <img class="project_thumbnail" src="./images/Package_Thumbnail.png" alt="Package">
+          <section class="project_description">
+            <h3>Coffee Mockup</h3>
+            <h5>This hypothetical coffee brand, named Hypnos & Joe, is a CBD infused
+              sleepytime drink that is meant to do the exact opposite of what Coffee
+              is meant to do.
+            </h5>
+          </section>
+        </div>
+
+        <div class="box eleventh">
+          <img class="project_thumbnail" src="./images/Retrospective_Thumbnail.png" alt="Restrospective">
+          <section class="project_description">
+            <h3 class="descriptionTitle">Yuko Shimizu - Restrospective</h3>
+            <h5 class="blackText">Yuko Shimizu is a famed illustrator who has her feet dipped into many
+              different subject matters such as the abstract, the surreal, and the
+              fantasy genre.
+            </h5>
+          </section>
+        </div>
+
       </div>
     </div>
 
     <div id="nav_bar">
-      <h4>Projects</h4>
-        <section class="table">
+      <div id="nav-scroll-container">
 
-          <section class="button_fade">
-            <ul>
-              <li>
-                <a">
-                  <button>Project Fire</button>
-                </a>
-              </li>
-              <li>
-                <a">
-                  <button>Vigilance</button>
-                </a>
-              </li>
-              <li>
-                <a">
-                  <button>Project Arroyo</button>
-                </a>
-              </li>
-              <li>
-                <a">
-                  <button>The Children of the Tree</button>
-                </a>
-              </li>
-              <li>
-                <a">
-                  <button>Coffee Mockup</button>
-                </a>
-              </li>
-            </ul>
-          </section>
+        <div class="box one">
+          <a class="navbar_items">
+            <button>Project Fire</button>
+          </a>
 
-        </section>
+          <a class="navbar_items">
+            <button>Vigilance</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Project Arroyo</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Children of the Tree</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Coffee Mockup</button>
+          </a>
+        </div>
+
+        <div class="box two">
+          <a class="navbar_items">
+            <button>Project Fire</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Vigilance</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Project Arroyo</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Children of the Tree</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Coffee Mockup</button>
+          </a>
+        </div>
+
+      </div>
     </div>
 
     <div id="externalLinks">
-      <button id="linked"></button>
-      <button id="insta"></button>
-      <button id="art"></button>
+      <button onclick="window.location.href='https://www.linkedin.com/in/harlen-bertrand-734942210/';"
+        id="linked" type="submit"></button>
+        <button onclick="window.location.href='https://www.instagram.com/monstrous.creations/';"
+        id="insta" type="submit"></button>
+        <button onclick="window.location.href='https://xmonster1.artstation.com/';"
+        id="art" type="submit"></button>
     </div>
 
-    <button id="contact">Contact</button>
+    <a href="mailto:harlenbertrand@outlook.com">
+      <button id="contact">Contact</button>
+    </a>
 
   </body>
 </html>
