Work in Progress

--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -16,7 +16,9 @@
       <div id="project-scroll-container">
 
         <div class="box one">
-          <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
+          <a href="aboutPage.html">
+            <img class="project_thumbnail" src="./images/Portfolio_portrait.png" alt="Me">
+          </a>
           <section class="project_description">
             <h3 class="descriptionTitle">Harlen Bertrand</h3>
             <h5 class="blackText">I draw, paint, code, do silly voices, and ride a 
@@ -27,7 +29,9 @@
         </div>
 
         <div class="box two">
-          <img class="project_thumbnail" src="./images/Project Fire_Thumbnail.png" alt="Fire">
+          <a href="projectFire_page.html">
+            <img class="project_thumbnail" src="./images/Project Fire_Thumbnail.png" alt="Fire">
+          </a>
           <section class="project_description">
             <h3>Project Fire</h3>
             <h5>Project Fire tells the story of a Knight tasked to find a 
